# xdiff

./: Cargo.toml  README.md  result.txt  result.yaml
examples/: config.rs  similar.rs
fixtures/: test.yml  xreq_test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
